# OOP_MAI_LAB3_

./: .gitignore  CMakeLists.txt  README.md
include/: figure.h  point.h  rectangle.h  rhombus.h  trapezoid.h  vector-figure.h  vector-points.h
src/: figure.cpp  main.cpp  point.cpp  rectangle.cpp  rhombus.cpp  trapezoid.cpp  vector-figure.cpp  vector-points.cpp
test/: test_figures.cpp  test_vectors.cpp
